fixed width of form on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -379,6 +379,7 @@ h3[class$="-header"] {
     border-radius: 25px;
     box-shadow: 0 2px 15px 2px $black;
     padding: 1.5em 2em 2em;
+    width: 100%;
 
     label {
       color: $white;
